--- a/content/posts/最近勒索病毒频发，大家注意防护哦.md
+++ b/content/posts/最近勒索病毒频发，大家注意防护哦.md
@@ -6,7 +6,7 @@ lastmod: 2022-05-05T09:14:09.926Z
 date: 2022-05-05T09:14:09.926Z
 categories: 技术分享
 tags: ["计算机病毒", "安全防护", "沙箱", "杀软推荐", "Windows Defender"]
-featured_image: https://cdn-p.freejishu.com/img/2021/08/20/vcl.jpghttps://imgcdn.a632079.me/uploads/2017/08/1928477,106.jpg
+featured_image: https://cdn-p.freejishu.com/img/2021/08/20/vcl.jpg
 description: 近期勒索病毒事件频发，本文将通过此事件切入，谈谈如何预防，掌握正确的网络资源处置态度，挑选一个合适的杀毒软件。
 ---
 
