--- a/content/posts/你没有领先，你也没有落后.md
+++ b/content/posts/你没有领先，你也没有落后.md
@@ -68,7 +68,7 @@ description: 你认为，你的人生无处安放吗？ 不！深呼吸，好好
 
 *While another became a CEO at 50 but lived to 90 years.*
 
-也有人迟到 50 岁才当上 CEO，
+也有人迟到 50 岁才当上 CEO，但活到了 90 岁。
 
 
 
